# nirc

./: .gitignore  CMakeLists.txt  README.md
include/: Attribute.hh  AttributeSet.hh  CodeGenerator.hh  Decoder.hh  Definition.hh  Deserializer.hh  File.hh  Instruction.hh  LinktimeCondition.hh  Local.hh  MemoryOrder.hh  Next.hh  Operation.hh  Operator.hh  Positioned.hh  Runtime.hh  Scope.hh  Signature.hh  SourcePosition.hh  Symbol.hh  Tags.hh  Type.hh  Value.hh
include/Utilities/: Assert.hh  Defer.hh  Indirect.hh  Optional.hh  Result.hh
src/: main.cc
src/lib/: Assert.cc  Attribute.cc  AttributeSet.cc  CodeGenerator.cc  Decoder.cc  Deserializer.cc  File.cc  Operation.cc  Signature.cc  Symbol.cc  Type.cc  Value.cc
